--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 __pycache__/
 weights/
-!weights/mode_split_best_coeff_0.168723_epoch_10.pth
+!./weights/mode_split_best_coeff_0.205319_epoch_11.pth
 eval_res/
